--- a/agenda/templates/agenda/base.html
+++ b/agenda/templates/agenda/base.html
@@ -1,7 +1,8 @@
+{% load static %}
 <html>
 <head>
 
-{% load static %}
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 
@@ -9,73 +10,48 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 
-    <link type="text/css" rel="stylesheet" href="{% static 'blog/estilos.css' %}">
-
-    <title> Blog Kennya</title>
+  <link rel="stylesheet" href="{% static 'agenda/estilo.css' %}">
 
 
 </head>
 
 <body>
-<h2> Blog da Kênnya</h2>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
-<div class="header">
-	{% if user.is_authenticated == False %}
-		<a href="/blog/fazer_login">Login</a>
-	{% else %}
-		<a href="/blog/fazer_logout">Logout</a>
-	{% endif %}
-		<a href="/blog/registrar">Registrar</a>
-</div>
-<br>
-
-
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/blog/">HOME</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/blog/sobre/">Sobre <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/artigos/">Artigos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/ultimos/">Ultimos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/visualizacoes/">Visualizações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/nova_mensagem/">Nova Mensagem</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/novo_post/">Novo Post</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog/rascunhos/">Rascunhos</a>
-      </li>
-      <!--<li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
-    </ul>
+  <div class="header">
+           
+           <h3>Sistema de Agendamento de translado intermunicipal para Unidades de Saúde</h3>   
   </div>
-</nav>
 
-<hr>
-{% block content %}
-{% endblock %}
+  <div class="container">
+        <div class="menu">
+           <ul>
+               <li><a href="/agenda/cadastro_paciente">Paciente</a></li>
+               <li><a href="/agenda/cadastro_veiculo">Veiculos</a></li>
+               <li><a href="/agenda/cadastro_cidade">Cidade</a></li>
+               <li><a href="/agenda/cadastro_motorista">Motorista</a></li>
+               <li><a href="#">Relatório</a></li>
+               <li><a href="#">login</a></li>    
+           </ul>
+ </div>
+     
+
+ <div class="content">
+   {% block content %}
+   {% endblock %}
+ </div>
+
+ <div class="footer">
+             
+             <h6>Desenvolvedores: Caroline Sibenachler, Kennya Lacerda, Lucas Castoldi.</h6>
+             
+ </div>
 
 
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
