--- a/agenda/templates/agenda/cadastrar_veiculo.html
+++ b/agenda/templates/agenda/cadastrar_veiculo.html
@@ -1,5 +1,24 @@
-<form action="/agenda/cadastro_veiculo/" method="post">
-	{% csrf_token%}
-	{{ form.as_p}}
-	<input type="submit" value="Salvar">
-</form>
+{% extends 'agenda/base.html' %}
+
+{% block content %}
+ 
+  <div class="container">
+    <div class="row justify-content-center pt-3 pt-sm-5">
+         <div class="col-md-6">
+           <div class="card bg-light">
+              <div class="card-body">
+
+							<form action="/agenda/cadastro_veiculo/" method="post">
+							<div class="col-md-6"> 
+								<div class="col-md-2 ">{% csrf_token%}</div>
+								<div class="col-md-2 ">{{ form.as_p}}</div>
+								<div class="col-md-2 "><input type="submit" value="Salvar"></div>
+						    </div>
+							</form>
+
+              </div>
+           </div>  
+         </div>      
+    </div>
+  </div>
+ {% endblock %}
