--- a/agenda/templates/agenda/base.html
+++ b/agenda/templates/agenda/base.html
@@ -34,9 +34,9 @@
                <li><a href="/agenda/cadastro_veiculo">Veiculos</a></li>
                <li><a href="/agenda/cadastro_cidade">Cidade</a></li>
                <li><a href="/agenda/cadastro_motorista">Motorista</a></li>
-               <li><a href="#">Relatório</a></li>
-               <li><a href="#">login</a></li>    
-                  </ul>
+               <li><a href="/agenda/relatorio">Relatório</a></li>
+               <!--<li><a href="#">login</a></li> -->   
+              </ul>
           </div>
      
 
