--- a/agenda/templates/agenda/index.html
+++ b/agenda/templates/agenda/index.html
@@ -2,19 +2,40 @@
 
 {% block content %}
 	<div class="content">
+
+	<div class="agenda">
+		<br>
+			<form action="envio_data_index/" method="post" >
+				{% csrf_token%}
+				<input name="data" id="data" type="date" required>
+				<input type="submit" value="Pesquisar"></div>
+			</form>
 	
-	{% for a in lista %}
-		<p>Paciente: {{a.paciente}}</p>
-		<p>Cidade: {{a.cidade}}</p>
-		<p>Local: {{a.local}}</p>
-		<p>Data: {{a.data}}</p>
-		<p>Tipo de Consulta: {{a.tipo_de_consulta}}</p> <hr> <br>
-	{% endfor%}	
+			<a href="agendar_consulta">
+     			<button class="btn btn-primary"> Adicionar</button>
+			</a>
+			<br>
+			<br>
+			{% for a in lista %}
+				<p>Paciente: {{a.paciente}}</p>
+				<p>Cidade: {{a.cidade}}</p>
+				<p>Local: {{a.local}}</p>
+				<p>Data: {{a.data}}</p>
+				<p>Tipo de Consulta: {{a.tipo_de_consulta}}</p> <hr> <br>
+			{% endfor%}	
+	
+	</div >
 
 
-	<a href="agendar_consulta">
-     <button class="btn btn-primary"> Adicionar</button>
+
+
+	<div class="alocar">		
+		<a href="alocar_veiculo/">
+     	<button class="btn btn-primary"> Alocação</button>
 	</a>
+
+	</div>
+		
 
 	</div>   	
 
