--- a/agenda/templates/agenda/base.html
+++ b/agenda/templates/agenda/base.html
@@ -22,7 +22,7 @@
 
      <div class="header">
             <br>
-           <h3>Sistema de Agendamento de translado intermunicipal para Unidades de Saúde</h3>   
+           <h2>Sistema de Agendamento de translado intermunicipal para Unidades de Saúde</h2>   
            <br>
      </div>
 
@@ -39,12 +39,13 @@
               </ul>
           </div>
      
-
+           <div class="content">
           
              {% block content %}
                 
 
              {% endblock %}
+          </div>
          
       </div>
  <div class="footer">
