--- a/agenda/templates/agenda/agendar_consulta.html
+++ b/agenda/templates/agenda/agendar_consulta.html
@@ -1,13 +1,26 @@
-{%extends 'agenda/base.html'%}
+{% extends 'agenda/base.html' %}
 
 {% block content %}
-  <div class="content">
-  	<form action="/agenda/agendar_consulta/" method="post">
-	{% csrf_token%}
-	{{ form.as_p}}
-	<input type="submit" value="Salvar">
-</form>
-  </div>
+<div class="container">
+    <div class="row justify-content-center pt-3 pt-sm-5">
+         <div class="col-md-6">
+           <div class="card bg-light">
+              <div class="card-body">
+
+  					<div class="content">
+  						<form action="/agenda/agendar_consulta/" method="post">
+  							<div class="col-md-6"> 
+								<div class="col-md-2 ">{% csrf_token%}</div>
+								<div class="col-md-2 ">{{ form.as_p}}</div>
+								<div class="col-md-2 "><input type="submit" value="Salvar"></div>
+							</div>	
+						</form>
+ 					 </div>
+ 			  </div>
+           </div>  
+        </div>      
+    </div>
+</div>
     	
 
 {% endblock%}
