--- a/agenda/templates/agenda/alocar_veiculo.html
+++ b/agenda/templates/agenda/alocar_veiculo.html
@@ -8,7 +8,7 @@
 				<form action="envio_data/" method="post" >
 					{% csrf_token%}
 					<input name="data" id="data" type="date" required>
-					<input type="submit" value="Pesquisar"></div>
+					<input type="submit" value="Pesquisar">
 				</form>
 					
 					<br>
@@ -31,18 +31,6 @@
 		
 			</div >
 			
-
-			<div class="veiculo">
-
-				{% for a in car %}
-						<p>Placa: {{a.placa}}</p>
-						<p>Cor: {{a.cor}}</p>
-						<p>Modelo: {{a.modelo}}</p>
-						<p>Capacidade: {{a.capacidade}}</p>				
-				{% endfor%}	
-		
-
-			</div>
 
 
 	</div>   	
