--- a/agenda/templates/agenda/relatorio.html
+++ b/agenda/templates/agenda/relatorio.html
@@ -1,13 +1,27 @@
 {%extends 'agenda/base.html'%}
 
 {% block content %}
-	<div class="content">
-		<form action="ver_relatorio/" method="post" >
-			{% csrf_token%}
-			<input name="data" id="data" type="date" required>
-			<input type="submit" value="Pesquisar"></div>
-		</form>
-	</div>   	
+<div class="container">
+    <div class="row justify-content-center pt-3 pt-sm-5">
+         <div class="col-md-6">
+           <div class="card bg-light">
+              <div class="card-body">
+
+					<div class="content">
+						<form action="ver_relatorio/" method="post" >
+						<div class="col-md-12"> 
+							<div class="col-md-6 ">{% csrf_token%}</div>
+							<div class="col-md-2 "><input name="data" id="data" type="date" required></div>
+							<div class="col-md-2 "><input type="submit" value="Pesquisar"></div>
+						</div>
+						</form>
+					</div> 
+
+              </div>
+           </div>  
+         </div>      
+    </div>
+</div>  	
 
 {% endblock %}
 
